--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  
+  <header>
+    <img src="MyPortfolio/yamada.png" alt="boy" widht="128" height="128">
+    <h1>山田太郎</h1>
+    <p>Webデザイナー見習いです</p>
+  </header>
+  <main></main>
+  <footer></footer>
 </body>
 </html>
