mainアップデート

--- a/index.html
+++ b/index.html
@@ -12,7 +12,26 @@
     <h1>山田太郎</h1>
     <p>Webデザイナー見習いです</p>
   </header>
-  <main></main>
+  <main>
+    <h2>WORKS</h2>
+    <div class="container">
+    <img src="MyPortfolio/work-1.png" alt="work" width="400" height="240">
+
+    <h3>すごいゲーム</h3>
+    <p>すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。</p>
+    <div class="container"></div>
+    <img src="MyPortfolio/work-2.png" alt="work" width="400" height="240">
+  
+    <h3>すごいゲーム</h3>
+    <p>すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。</p>
+    <div class="container">
+    <img src="MyPortfolio/work-3.png" alt="work" width="400" height="240">
+
+      <h3>すごいゲーム</h3>
+      <p>すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。</p>
+      
+    
+  </main>
   <footer></footer>
 </body>
 </html>
