--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
       
     
   </main>
-  <footer></footer>
+  <hr color="#eee">
+  <footer>
+    <section>
+      <p>(c) dotinstall.com</p>
+      <img src="MyPortfolio/sns-1.png" alt="">
+      <img src="MyPortfolio/sns-2.png" alt="">
+    </section>  </footer>
 </body>
 </html>
