--- a/256/動かして学ぶJavaScript Vol.2/02文字数をカウントしてみよう/index.html
+++ b/256/動かして学ぶJavaScript Vol.2/02文字数をカウントしてみよう/index.html
@@ -10,7 +10,7 @@
   <section>
     <textarea placeholder="今、どういう気持ち？" id="message"></textarea>
     <div>
-      <p id="status">a</p>    
+      <p id="status"></p>    
       <button>投稿</button>
     </div>
   </section>
