--- a/ドットインストール/フレックスボックス/index.html
+++ b/ドットインストール/フレックスボックス/index.html
@@ -7,13 +7,43 @@
   <title>Document</title>
 </head>
 <body>
-  <header>header</header>
-  <div class="container">
-    <main>main</main>
-    <nav>nav</nav>
-    <aside>aside</aside>
+ <article>
+  <img src="forest.png" alt="" width="240" height="160">
+  <div class="text">
+    <h1>タイトル</h1>
+    <p>こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。</p>
   </div>
+ </article>
 
-  <footer>footer</footer>
+ <article>
+  <img src="forest.png" alt="" width="240" height="160">
+  <div class="text">
+    <h1>タイトル</h1>
+    <p>こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。</p>
+  </div>
+ </article>
+
+ <article>
+  <img src="forest.png" alt="" width="240" height="160">
+  <div class="text">
+    <h1>タイトル</h1>
+    <p>こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。</p>
+  </div>
+ </article>
+
+ <article>
+  <img src="forest.png" alt="" width="240" height="160">
+  <div class="text">
+    <h1>タイトル</h1>
+    <p>こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。</p>
+  </div>
+ </article>
+ <article>
+  <img src="forest.png" alt="" width="240" height="160">
+  <div class="text">
+    <h1>タイトル</h1>
+    <p>こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。</p>
+  </div>
+ </article>
 </body>
 </html>
