--- a/ドットインストール/フレックスボックス/index.html
+++ b/ドットインストール/フレックスボックス/index.html
@@ -7,43 +7,19 @@
   <title>Document</title>
 </head>
 <body>
- <article>
-  <img src="forest.png" alt="" width="240" height="160">
-  <div class="text">
-    <h1>タイトル</h1>
-    <p>こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。</p>
-  </div>
- </article>
-
- <article>
-  <img src="forest.png" alt="" width="240" height="160">
-  <div class="text">
-    <h1>タイトル</h1>
-    <p>こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。</p>
-  </div>
- </article>
-
- <article>
-  <img src="forest.png" alt="" width="240" height="160">
-  <div class="text">
-    <h1>タイトル</h1>
-    <p>こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。</p>
-  </div>
- </article>
-
- <article>
-  <img src="forest.png" alt="" width="240" height="160">
-  <div class="text">
-    <h1>タイトル</h1>
-    <p>こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。</p>
-  </div>
- </article>
- <article>
-  <img src="forest.png" alt="" width="240" height="160">
-  <div class="text">
-    <h1>タイトル</h1>
-    <p>こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。</p>
-  </div>
- </article>
+ <header>
+  <img src="logo.png" alt="" width="64" height="64"> 
+  <ul>
+    <li>
+      <a href="#">Menu</a>
+    </li>
+    <li>
+      <a href="#">Menu</a>
+    </li>
+    <li>
+      <a href="#">Menu</a>
+    </li>
+  </ul>
+ </header>
 </body>
 </html>
