02記事のカードをデザインしてみよう finished

--- a/256/なおして学ぶWebデザイン Vol.1/02記事のカードをデザインしてみよう/index.html
+++ b/256/なおして学ぶWebデザイン Vol.1/02記事のカードをデザインしてみよう/index.html
@@ -6,6 +6,7 @@
   <title>My Playground</title>
   <!-- CSSを読み込む際に必要です -->
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
   <!-- 自由に編集していただいて構いません -->
@@ -14,13 +15,13 @@
     <li class="item">
       <img src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4366/3100138fea40d76fdd68b5b4ea8714190cc9adea.jpg" width="300">
       <h1 class="title">いつか自分も宇宙飛行士になりたい</h1>
-      <p class="description">2023.01.01</p>
+      <p class="description"><i class="bi bi-calendar-plus-fill"></i> 2023.01.01</p>
     </li>
       <li class="item">
         <img src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4367/5bced057180b91b6721c46e6345fc234536a7281.jpg" width="300">
 
       <h1 class="title">宇宙服を着てみたい</h1>
-      <p class="description">2023.01.01</p>
+      <p class="description"><i class="bi bi-calendar-plus-fill"></i> 2023.01.01</p>
     </li>
         <li class="item">
 
@@ -28,15 +29,15 @@
 
 
       <h1 class="title">宇宙はロマンがある</h1>
-      <p class="description">2023.01.01</p>
+      <p class="description"><i class="bi bi-calendar-plus-fill"></i> 2023.01.01</p>
     </li>
         <li class="item">
 
 <img src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4368/9ed3b885f96caf5224adff42522a565446ed523f.jpg" width="300">
 
 
-      <h1 class="title">人類はどうやって月に辿り着いたのか、徹底的に調べてまとめてみました</h1>
-      <p class="description">2023.01.01</p>
+      <h1 class="title">人類はどうやって月に辿り着いたのか、<br>徹底的に調べてまとめてみました</h1>
+      <p class="description"><i class="bi bi-calendar-plus-fill"></i> 2023.01.01</p>
     </li>
 
   </ul>
