--- a/256/なおして学ぶWebデザイン Vol.1/03画像付きカードをデザインしてみよう/index.html
+++ b/256/なおして学ぶWebデザイン Vol.1/03画像付きカードをデザインしてみよう/index.html
@@ -9,6 +9,24 @@
 </head>
 <body>
   <!-- 自由に編集していただいて構いません -->
+   <section class="content">
+    <ul class="cardlist">
+<li class="cardlist_item">
+  <a href="#" class="cardlist_link"></a>
+  <div class="cardlist_thumbnail">
+
+  </div>
+  <div class="cardlist_meta">
+    <h3 class="cardlist_title">
+      
+    </h3>
+    <description class="cardlist">
+
+    </description>
+  </div>
+</li>
+    </ul>
+   </section>
   
 <img src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4372/23a50b40928625ada28f4fa83c48f40aeea64f93.jpg" width="400">
 Blanding ブランディング
