--- a/256/１/index.html
+++ b/256/１/index.html
@@ -1,46 +1,101 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Playground</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <!-- CSSを読み込むため、以下のタグは削除しないでください -->
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-  <!-- このHTMLファイルは自由に編集していただいて構いません -->
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Playground</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+    <!-- CSSを読み込むため、以下のタグは削除しないでください -->
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <!-- このHTMLファイルは自由に編集していただいて構いません -->
 
-  <header>
-    <!-- ヘッダー -->
-    <img class="mobile_pic" src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/749274/4308/60be5db0515c994465798143c77b41bf3ca85501.png" width="200">
+    <header>
+      <!-- ヘッダー -->
+      <h1>
+        <img
+          class="mobile_pic"
+          src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/749274/4308/60be5db0515c994465798143c77b41bf3ca85501.png"
+          width="120"
+        />
 
-    <img class="desktop_pic"  src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/749274/4307/d4c513094573b5b5b80aca939057e06cd6b768ba.png" width="400">
+        <img
+          class="desktop_pic"
+          src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/749274/4307/d4c513094573b5b5b80aca939057e06cd6b768ba.png"
+          width="390"
+        />
+      </h1>
+      <i class="bi bi-list"></i>
+      <div class="menu">
+        <div class="item">Concept</div>
+        <div class="item">Services</div>
+        <div class="item">Gallery</div>
+      </div>
+    </header>
 
-    <i class="bi bi-list"></i>
-  </header>
-  
-  <section>
-    <!-- ヒーローエリア -->
-  </section>
-  
-  <section>
-    <!-- コンセプト紹介 後日実装 -->
-  </section>
-  
-  <section>
-    <!-- サービス紹介 後日実装 -->
-  </section>
-  
-  <section>
-    <!-- ギャラリー 後日実装 -->
-  </section>
-  
-  <footer>
-    <!-- フッター -->
-  </footer>
+    <!-- hero -->
+    <section class="hero">
+      <div class="desc">
+        <div class="card">
+          <h2>
+            <span>「美」</span>と「力」で<br />
+            花を束ねる
+          </h2>
+          <p>Beauty x Power</p>
+        </div>
+      </div>
 
-  <!-- JavaScriptの実装をする方は以下のタグを削除しないでください -->
-  <script src="js/main.js"></script>
-</body>
+      <!-- ヒーローエリア -->
+    </section>
+
+    <section>
+      <!-- コンセプト紹介 後日実装 -->
+    </section>
+
+    <section>
+      <!-- サービス紹介 後日実装 -->
+    </section>
+
+    <section>
+      <!-- ギャラリー 後日実装 -->
+    </section>
+
+    <footer>
+      <!-- フッター -->
+      <section>
+        <img
+          src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/749274/4306/4e3d3f2421ff1ae2e051612532b5320cffb1244e.png"
+          width="200"
+        />
+
+        <div class="desc">
+          <ul>
+            <li class="headName">住所</li>
+            <li class="headName">電話番号</li>
+            <li class="headName">営業時間</li>
+            <li class="headName">定休日</li>
+          </ul>
+          <ul>
+            <li class="headName">東京都板橋区</li>
+            <li class="headName">080-xxxx-xxxx</li>
+            <li class="headName">9:00~18:00</li>
+            <li class="headName">火曜日、水曜日</li>
+          </ul>
+        </div>
+      </section>
+      <div class="sns">
+        <i class="bi bi-instagram"></i>
+        <i class="bi bi-twitter"></i>
+        <i class="bi bi-facebook"></i>
+      </div>
+      <p>@ osumo flowers all rights reserved</p>
+    </footer>
+
+    <!-- JavaScriptの実装をする方は以下のタグを削除しないでください -->
+    <script src="js/main.js"></script>
+  </body>
 </html>
