--- a/256/フロントエンド案件修行 osumou flowers編/03サービスセクションを制作しよう/index.html
+++ b/256/フロントエンド案件修行 osumou flowers編/03サービスセクションを制作しよう/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ja">
   <head>
@@ -66,7 +67,7 @@
               src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/101/4330/2bdd8283b2819d0791da7b7d130acbf0df5dd52e.jpg"
               width="400"
             />
-            <!-- コンセプト紹介 後日実装 -->
+      <!-- **********コンセプトについて********** -->
           </li>
           <li class="space">
             <div class="text">
@@ -99,7 +100,50 @@
       </section>
 
       <section class="service">
-        <!-- サービス紹介 後日実装 -->
+
+
+      <!-- *************サービスについて******************** -->
+        <ul class="contents">
+          <li class="service_title">
+        ギフト
+
+          </li>
+          <p class="service_desc">
+美しい花束や花のアレンジメントをご提供します。特別な日や贈り物に最適な花を選ぶお手伝いをし、その瞬間をより特別なものにします。最適な花の選択からラッピングまで、あなたの気持ちを花言葉に込めて伝えます。
+          </p>
+          <img src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4323/a7024aeac266c89a5e292ce8a7b291a73538fb12.jpg" width="400" alt="gift_picture" class="service_img">
+          <li class="service_title">
+イベント装飾
+
+          </li>
+          <p class="service_desc">
+あらゆるイベントを花で盛り上げます。結婚式から誕生日パーティー、記念日のお祝いまで、各種イベントに合わせた華やかな装飾を提供します。会場の雰囲気やテーマに応じた花選びから、豪華なディスプレイ展示まで、素敵な空間を創造します。
+          </p>
+          <img src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4325/56b9c5d7e73177047b7c64c4767eec4ca6ed7b89.jpg" width="400" alt="event_decoration" class="service_img">
+          <li class="service_title">
+
+ワークショップ
+
+          </li>
+          <p class="service_desc">
+花を用いたアレンジメントのワークショップを開催します。美しい花束の作り方やオリジナルの花アレンジメントの制作など、花と共に特別な時間をお過ごしいただきます。初心者から経験者まで、花の持つ美と力を体感できる経験を提供します。
+          </p>
+          <img src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4326/d3edf5e22960e5704509378d6200efe2f1ab28c1.jpg" width="400" alt="workshop" class="service_img">
+          <li class="service_title">
+配達サービス
+
+          </li>
+          <p class="service_desc">
+花束やアレンジメントをお客様の指定した場所へ直接配達します。大切な人へのサプライズや、忙しい日常でも花の贈り物を手軽にお楽しみいただけます。確実に、心からのメッセージをお届けするための配送サービスをご提供いたします。
+          </p>
+          <img src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4324/cdf2d6b701804d34c66da9bc94e4338f5cbce8a1.jpg" width="400" alt="deliverly" class="service_img">
+        </ul>
+
+
+
+
+
+
       </section>
 
       <section class="main">
