--- a/256/フロントエンド案件修行 osumou flowers編/03サービスセクションを制作しよう/index.html
+++ b/256/フロントエンド案件修行 osumou flowers編/03サービスセクションを制作しよう/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja">
   <head>
@@ -9,6 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- CSSを読み込むため、以下のタグは削除しないでください -->
     <link rel="stylesheet" href="css/styles.css" />
   </head>
@@ -67,7 +67,7 @@
               src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/101/4330/2bdd8283b2819d0791da7b7d130acbf0df5dd52e.jpg"
               width="400"
             />
-      <!-- **********コンセプトについて********** -->
+            <!-- **********コンセプトについて********** -->
           </li>
           <li class="space">
             <div class="text">
@@ -99,51 +99,71 @@
         </ul>
       </section>
 
+
+
+
+
+
       <section class="service">
+        <!-- *************サービスについて**************** -->
 
-
-      <!-- *************サービスについて******************** -->
         <ul class="contents">
-          <li class="service_title">
-        ギフト
+          <h1>About our service</h1>
 
-          </li>
-          <p class="service_desc">
-美しい花束や花のアレンジメントをご提供します。特別な日や贈り物に最適な花を選ぶお手伝いをし、その瞬間をより特別なものにします。最適な花の選択からラッピングまで、あなたの気持ちを花言葉に込めて伝えます。
-          </p>
-          <img src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4323/a7024aeac266c89a5e292ce8a7b291a73538fb12.jpg" width="400" alt="gift_picture" class="service_img">
-          <li class="service_title">
-イベント装飾
+          <div class="service_item">
 
-          </li>
-          <p class="service_desc">
-あらゆるイベントを花で盛り上げます。結婚式から誕生日パーティー、記念日のお祝いまで、各種イベントに合わせた華やかな装飾を提供します。会場の雰囲気やテーマに応じた花選びから、豪華なディスプレイ展示まで、素敵な空間を創造します。
-          </p>
-          <img src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4325/56b9c5d7e73177047b7c64c4767eec4ca6ed7b89.jpg" width="400" alt="event_decoration" class="service_img">
-          <li class="service_title">
+            <img data-aos="fade-left"
+              src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4323/a7024aeac266c89a5e292ce8a7b291a73538fb12.jpg"
+              width="400"
+              alt="gift_picture"
+              class="service_img"
+            />
+            <h3><li class="service_title">          <i class="bi bi-check-circle"></i> ギフト</li></h3>
 
-ワークショップ
+            <p class="service_desc">
+              美しい花束や花のアレンジメントをご提供します。特別な日や贈り物に最適な花を選ぶお手伝いをし、その瞬間をより特別なものにします。最適な花の選択からラッピングまで、あなたの気持ちを花言葉に込めて伝えます。
+            </p>
+          </div>
+          <div class="service_item">
+            <img data-aos="fade-left"
+              src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4325/56b9c5d7e73177047b7c64c4767eec4ca6ed7b89.jpg"
+              width="400"
+              alt="event_decoration"
+              class="service_img"
+            />
+            <h3><li class="service_title">          <i class="bi bi-check-circle"></i> イベント装飾</li></h3>
 
-          </li>
-          <p class="service_desc">
-花を用いたアレンジメントのワークショップを開催します。美しい花束の作り方やオリジナルの花アレンジメントの制作など、花と共に特別な時間をお過ごしいただきます。初心者から経験者まで、花の持つ美と力を体感できる経験を提供します。
-          </p>
-          <img src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4326/d3edf5e22960e5704509378d6200efe2f1ab28c1.jpg" width="400" alt="workshop" class="service_img">
-          <li class="service_title">
-配達サービス
+            <p class="service_desc">
+              あらゆるイベントを花で盛り上げます。結婚式から誕生日パーティー、記念日のお祝いまで、各種イベントに合わせた華やかな装飾を提供します。会場の雰囲気やテーマに応じた花選びから、豪華なディスプレイ展示まで、素敵な空間を創造します。
+            </p>
+          </div>
+          <div class="service_item">
+            <img data-aos="fade-left"
+              src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4326/d3edf5e22960e5704509378d6200efe2f1ab28c1.jpg"
+              width="400"
+              alt="workshop"
+              class="service_img"
+            />
+            <h3><li class="service_title">          <i class="bi bi-check-circle"></i> ワークショップ</li></h3>
 
-          </li>
-          <p class="service_desc">
-花束やアレンジメントをお客様の指定した場所へ直接配達します。大切な人へのサプライズや、忙しい日常でも花の贈り物を手軽にお楽しみいただけます。確実に、心からのメッセージをお届けするための配送サービスをご提供いたします。
-          </p>
-          <img src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4324/cdf2d6b701804d34c66da9bc94e4338f5cbce8a1.jpg" width="400" alt="deliverly" class="service_img">
+            <p class="service_desc">
+              花を用いたアレンジメントのワークショップを開催します。美しい花束の作り方やオリジナルの花アレンジメントの制作など、花と共に特別な時間をお過ごしいただきます。初心者から経験者まで、花の持つ美と力を体感できる経験を提供します。
+            </p>
+          </div>
+          <div class="service_item">
+            <img data-aos="fade-left"
+              src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4324/cdf2d6b701804d34c66da9bc94e4338f5cbce8a1.jpg"
+              width="400"
+              alt="deliverly"
+              class="service_img"
+            />
+            <h3><li class="service_title">          <i class="bi bi-check-circle"></i> 配達サービス</li></h3>
+
+            <p class="service_desc">
+              花束やアレンジメントをお客様の指定した場所へ直接配達します。大切な人へのサプライズや、忙しい日常でも花の贈り物を手軽にお楽しみいただけます。確実に、心からのメッセージをお届けするための配送サービスをご提供いたします。
+            </p>
+          </div>
         </ul>
-
-
-
-
-
-
       </section>
 
       <section class="main">
@@ -190,5 +210,9 @@
 
     <!-- JavaScriptの実装をする方は以下のタグを削除しないでください -->
     <script src="js/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
