--- a/256/なおして学ぶWebデザイン Vol.2/02 商品ページをデザインしてみよう/index.html
+++ b/256/なおして学ぶWebデザイン Vol.2/02 商品ページをデザインしてみよう/index.html
@@ -1,37 +1,93 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Playground</title>
-  <!-- CSSを読み込む際に必要です -->
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-  <!-- 自由に編集していただいて構いません -->
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Playground</title>
+    <!-- CSSを読み込む際に必要です -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <!-- 自由に編集していただいて構いません -->
+    <div class="container">
+      <div class="left_content">
+        <h3 class="pic">
+          <img
+            src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4437/a909d0ef3ff4511cebd85fae0a13818f4b07e43c.jpg"
+            width="400"
+          />
+        </h3>
+        <div class="small">
+          <img
+            src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4438/f29dbfe714fee5a8b2f17c6b07777be96e02c133.jpg"
+            width="400"
+          />
+          <img
+            src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4440/79acb1c3b6a4fd21f28da17dfae725cfd185f858.jpg"
+            width="400"
+          />
+          <img
+            src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4439/529f8ab22a167edbb839bcd8bd3db6ca228c7cec.jpg"
+            width="400"
+          />
+        </div>
+      </div>
+      <div class="rt_content">
+        <h2 class="title">DF 木製ウォールシェルフ WS-80NB</h2>
+        <div class="reputation">
+          <div class="star">
+            <i class="bi bi-star-fill"></i>
+            <i class="bi bi-star-fill"></i>
+            <i class="bi bi-star-fill"></i>
+            <i class="bi bi-star-fill"></i>
+            <i class="bi bi-star-half"></i>
+          </div>
+          <div class="favorite">
+            <i class="bi bi-heart-fill"></i> お気に入り
+          </div>
+        </div>
 
-  <img src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4437/a909d0ef3ff4511cebd85fae0a13818f4b07e43c.jpg" width="400">
-<img src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4438/f29dbfe714fee5a8b2f17c6b07777be96e02c133.jpg" width="400">
-<img src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4440/79acb1c3b6a4fd21f28da17dfae725cfd185f858.jpg" width="400">
-<img src="https://256times-upload-files.s3.ap-northeast-1.amazonaws.com/production/702833/4439/529f8ab22a167edbb839bcd8bd3db6ca228c7cec.jpg" width="400">
-  
-DF 木製ウォールシェルフ WS-80NB
-¥7,980
-Dotinstall Furnitures社による、木製のウォールシェルフ。シンプルで飽きのこないデザインが、どのようなお部屋にも調和します。
+        <div class="box">
+          <i class="bi bi-square-fill box1"></i
+          ><i class="bi bi-square-fill box2"></i
+          ><i class="bi bi-square-fill box3"></i>
+        </div>
+        <div class="price">¥7,980</div>
+        <p class="article">
+          Dotinstall Furnitures社による、木製のウォールシェルフ。<br />シンプルで飽きのこないデザインが、どのようなお部屋にも調和します。
+        </p>
+        <table>
+          <thead></thead>
+          <tbody>
+            <tr>
+              <th>寸法</th>
+              <td>オーク材</td>
+            </tr>
+            <tr>
+              <th>材質</th>
+              <td>W800 x D200 x H20[mm]</td>
+            </tr>
+            <tr>
+              <th>付属品</th>
+              <td>固定用ネジ</td>
+            </tr>
+            <tr>
+              <th>取扱開始</th>
+              <td>2023年9月19日</td>
+            </tr>
+          </tbody>
+        </table>
 
-カートに入れる
-リストに追加
-
-材質
-オーク材
-寸法
-W800 x D200 x H20[mm]
-付属品
-固定用ネジ
-取扱開始
-2023年9月19日
-  
-  <!-- JavaScriptを利用する際に必要です -->
-  <script src="js/main.js"></script>
-</body>
+        <div class="cart_btn">
+          <i class="bi bi-cart-plus-fill"></i> ADD TO CART
+        </div>
+      </div>
+    </div>
+    <!-- JavaScriptを利用する際に必要です -->
+    <script src="js/main.js"></script>
+  </body>
 </html>
