--- a/etc/HP内の文字検索/index.html
+++ b/etc/HP内の文字検索/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
   <div class="container">
-    <form action="" method="post">
-      <input type="text" id="word">
-      <input type="submit">
+    <form action="https://www.google.com/search" method="get">
+      <input type="text" id="word" name="q" placeholder="検索ワードを入力">
+      <input type="hidden" name="sitesearch" value="kitajima-hp.com">
+      <input type="submit" value="検索">
     </form>
   </div>
 </body>
