--- a/256/なおして学ぶWebデザイン Vol.2/04/index.html
+++ b/256/なおして学ぶWebデザイン Vol.2/04/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Playground</title>
     <!-- CSSを読み込む際に必要です -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -17,7 +20,7 @@
           <i class="bi bi-person"></i>
           <h1 class="item_title">Basic</h1>
           <h3 class="item_header">個人利用やお試し用途に</h3>
-          <div class="item_price"><span>¥0</span> / 月</div>
+          <div class="item_price"><span>¥0</span></div>
           <ul>
             <li>最大1プロジェクト</li>
             <li>最大2ユーザー</li>
@@ -26,11 +29,11 @@
               ※商用目的のご利用は、プロフェッショナル以上のプランをご利用ください。
             </li>
           </ul>
-          <button>登録</button>
+          <button>無料</button>
         </div>
 
         <div class="item">
-          <div class="recommend"></div>
+          <div class="recommend active">おすすめ</div>
           <i class="bi bi-people"></i>
           <h1 class="item_title">Professional</h1>
           <h3 class="item_header">個人事業主や中小企業に最適</h3>
@@ -41,7 +44,7 @@
             <li>APIによる各種サービスとの連携</li>
             <li>カスタマーサポート</li>
           </ul>
-          <button>登録</button>
+          <button>14日間無料</button>
         </div>
 
         <div class="item">
@@ -49,15 +52,15 @@
           <i class="bi bi-building"></i>
           <h1 class="item_title">Enterprize</h1>
           <h3 class="item_header">大規模なコミュニケーションに</h3>
-          <div class="item_price"><span>¥3000</span> / 月</div>
+          <div class="item_price"><span>¥3,000</span> / 月</div>
           <ul>
             <li>無制限のユーザー数</li>
             <li>強化されたセキュリティ設定</li>
             <li>高機能なユーザー管理ダッシュボード</li>
             <li>専用のカスタマーサポート</li>
-            <li></li>
+            <li> </li>
           </ul>
-          <button>登録</button>
+          <button>14日間無料</button>
         </div>
       </div>
     </section>
